# vetive

./: .gitignore  .pylintrc  Makefile  pyproject.toml  requirements.txt  u.ps1  users_stations.csv
.github/workflows/: install-black-lint-test.yml  python-app.yml
docs/: EntityModel.md
tests/: test_date_pair.py  test_init.py  test_vetive.py
tests/corpus/: hello.txt  pyproject.toml.txt
tests/corpus/corpus_multiple/: lyrics.txt  requirements.txt  second_file.txt
tests/corpus/corpus_single/: hello.txt
vetive/: __init__.py  link.py  programasyon-python.code-workspace  tmp.py
vetive/date_pair/: __init__.py
