[tool.poetry]
name = "vetive"
version = "0.1.0"
description = ""
authors = ["J. Tipan Verella <tverella@tunein.com>", "Dede Assann <dedeassann20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pylint = "^2.13.7"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
