[tool.poetry]
name = "vetive"
version = "0.1.0"
description = "Rasin videyo YouTube"
authors = ["J. Tipan Verella <tverella@tunein.com>", "Dede Assann <dedeassann20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
pylint = "^2.14.3"
pytest = "^7.1.2"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
